Fix date filter alignments

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -215,6 +215,9 @@ form[id^="smallpart-student-index"] {
 		color: @color_text;
 		font-size: 20px;
 	}
+	div#smallpart-student-index_comment_date_filter {
+		display: flex;
+	}
 	.filter {
 		padding-top: 5px;
 		display: block;
